// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toggle /> matches snapshot 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    onClick={[MockFunction]}
  >
    <button
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        N/A
        <img
          onError={[Function]}
          src=""
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src=""
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;

exports[`<Toggle /> matches snapshot 2`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    className="fugiat error molestiae laborum est possimus assumenda"
    onClick={[MockFunction]}
  >
    <button
      className="fugiat error molestiae laborum est possimus assumenda"
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn fugiat error molestiae laborum est possimus assumenda"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        N/A
        <img
          onError={[Function]}
          src=""
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src=""
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;

exports[`<Toggle /> matches snapshot 3`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    className="enim iure facilis ut explicabo iure vitae"
    onClick={[MockFunction]}
  >
    <button
      className="enim iure facilis ut explicabo iure vitae"
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn enim iure facilis ut explicabo iure vitae"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        N/A
        <img
          onError={[Function]}
          src=""
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src=""
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;

exports[`<Toggle /> matches snapshot 4`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    onClick={[MockFunction]}
  >
    <button
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        Miss Cortez Lesch
        <img
          onError={[Function]}
          src="http://www.Williamson.net/"
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src="http://www.Williamson.net/"
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;

exports[`<Toggle /> matches snapshot 5`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    className="soluta non omnis consequatur enim quia autem"
    onClick={[MockFunction]}
  >
    <button
      className="soluta non omnis consequatur enim quia autem"
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn soluta non omnis consequatur enim quia autem"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        Miss Elisabeth Johns
        <img
          onError={[Function]}
          src="http://www.Bashirian.org/"
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src="http://www.Bashirian.org/"
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;

exports[`<Toggle /> matches snapshot 6`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    onClick={[MockFunction]}
  >
    <button
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        Miss Claire Kertzmann
        <img
          onError={[Function]}
          src=""
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src=""
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;

exports[`<Toggle /> matches snapshot 7`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    className="laborum eius aut illo dolorum ab aliquam"
    onClick={[MockFunction]}
  >
    <button
      className="laborum eius aut illo dolorum ab aliquam"
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn laborum eius aut illo dolorum ab aliquam"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        N/A
        <img
          onError={[Function]}
          src=""
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src=""
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;

exports[`<Toggle /> matches snapshot 8`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    onClick={[MockFunction]}
  >
    <button
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        Ms. Janiya Powlowski
        <img
          onError={[Function]}
          src="http://Richmond.info/"
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src="http://Richmond.info/"
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;

exports[`<Toggle /> matches snapshot 9`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    className="occaecati illum animi vel provident dicta perferendis"
    onClick={[MockFunction]}
  >
    <button
      className="occaecati illum animi vel provident dicta perferendis"
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn occaecati illum animi vel provident dicta perferendis"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        N/A
        <img
          onError={[Function]}
          src="http://Duncan.name/"
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src="http://Duncan.name/"
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;

exports[`<Toggle /> matches snapshot 10`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    className="cupiditate illum saepe ut assumenda sint quia"
    onClick={[MockFunction]}
  >
    <button
      className="cupiditate illum saepe ut assumenda sint quia"
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn cupiditate illum saepe ut assumenda sint quia"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        Miss Linnea Pfannerstill
        <img
          onError={[Function]}
          src="http://www.Rosalee.tv/"
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src="http://www.Rosalee.tv/"
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;

exports[`<Toggle /> matches snapshot 11`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    className="exercitationem omnis laborum exercitationem est sapiente laudantium"
    onClick={[MockFunction]}
  >
    <button
      className="exercitationem omnis laborum exercitationem est sapiente laudantium"
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn exercitationem omnis laborum exercitationem est sapiente laudantium"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        Mrs. Ana Mills
        <img
          onError={[Function]}
          src="http://Langosh.biz/"
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src="http://Langosh.biz/"
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;

exports[`<Toggle /> matches snapshot 12`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    className="assumenda quasi adipisci mollitia iste itaque omnis"
    onClick={[MockFunction]}
  >
    <button
      className="assumenda quasi adipisci mollitia iste itaque omnis"
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn assumenda quasi adipisci mollitia iste itaque omnis"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        Miss Herminia Beahan
        <img
          onError={[Function]}
          src=""
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src=""
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;

exports[`<Toggle /> matches snapshot 13`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    onClick={[MockFunction]}
  >
    <button
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        N/A
        <img
          onError={[Function]}
          src=""
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src=""
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;

exports[`<Toggle /> matches snapshot 14`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    className="commodi eaque nisi cum ducimus nemo doloremque"
    onClick={[MockFunction]}
  >
    <button
      className="commodi eaque nisi cum ducimus nemo doloremque"
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn commodi eaque nisi cum ducimus nemo doloremque"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        N/A
        <img
          onError={[Function]}
          src=""
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src=""
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;

exports[`<Toggle /> matches snapshot 15`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    onClick={[MockFunction]}
  >
    <button
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        Mrs. Ryleigh Grant
        <img
          onError={[Function]}
          src="http://Cassidy.me/"
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src="http://Cassidy.me/"
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;

exports[`<Toggle /> matches snapshot 16`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    onClick={[MockFunction]}
  >
    <button
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        N/A
        <img
          onError={[Function]}
          src=""
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src=""
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;

exports[`<Toggle /> matches snapshot 17`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    onClick={[MockFunction]}
  >
    <button
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        N/A
        <img
          onError={[Function]}
          src=""
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src=""
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;

exports[`<Toggle /> matches snapshot 18`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    onClick={[MockFunction]}
  >
    <button
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        N/A
        <img
          onError={[Function]}
          src=""
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src=""
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;

exports[`<Toggle /> matches snapshot 19`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    className="explicabo eaque necessitatibus sit suscipit omnis necessitatibus"
    onClick={[MockFunction]}
  >
    <button
      className="explicabo eaque necessitatibus sit suscipit omnis necessitatibus"
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn explicabo eaque necessitatibus sit suscipit omnis necessitatibus"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        Miss Fiona Lubowitz
        <img
          onError={[Function]}
          src=""
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src=""
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;

exports[`<Toggle /> matches snapshot 20`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    className="ullam quae corporis qui aut nobis quo"
    onClick={[MockFunction]}
  >
    <button
      className="ullam quae corporis qui aut nobis quo"
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn ullam quae corporis qui aut nobis quo"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        N/A
        <img
          onError={[Function]}
          src="http://www.Wyman.biz/"
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src="http://www.Wyman.biz/"
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;

exports[`<Toggle /> matches snapshot 21`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    onClick={[MockFunction]}
  >
    <button
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        N/A
        <img
          onError={[Function]}
          src=""
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src=""
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;

exports[`<Toggle /> matches snapshot 22`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    className="occaecati nulla aut sunt est rerum at"
    onClick={[MockFunction]}
  >
    <button
      className="occaecati nulla aut sunt est rerum at"
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn occaecati nulla aut sunt est rerum at"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        Mrs. Ashlee Jakubowski
        <img
          onError={[Function]}
          src=""
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src=""
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;

exports[`<Toggle /> matches snapshot 23`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    className="dolores fugiat quis et voluptas culpa et"
    onClick={[MockFunction]}
  >
    <button
      className="dolores fugiat quis et voluptas culpa et"
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn dolores fugiat quis et voluptas culpa et"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        N/A
        <img
          onError={[Function]}
          src=""
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src=""
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;

exports[`<Toggle /> matches snapshot 24`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    onClick={[MockFunction]}
  >
    <button
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        N/A
        <img
          onError={[Function]}
          src=""
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src=""
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;

exports[`<Toggle /> matches snapshot 25`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    onClick={[MockFunction]}
  >
    <button
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        N/A
        <img
          onError={[Function]}
          src=""
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src=""
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;

exports[`<Toggle /> matches snapshot 26`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    className="sint officiis qui dignissimos dolore qui voluptatem"
    onClick={[MockFunction]}
  >
    <button
      className="sint officiis qui dignissimos dolore qui voluptatem"
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn sint officiis qui dignissimos dolore qui voluptatem"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        N/A
        <img
          onError={[Function]}
          src=""
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src=""
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;

exports[`<Toggle /> matches snapshot 27`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    className="nihil iste est unde rem similique et"
    onClick={[MockFunction]}
  >
    <button
      className="nihil iste est unde rem similique et"
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn nihil iste est unde rem similique et"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        N/A
        <img
          onError={[Function]}
          src="http://Hand.tv/"
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src="http://Hand.tv/"
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;

exports[`<Toggle /> matches snapshot 28`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    className="quia dolores quisquam aut consequatur sint provident"
    onClick={[MockFunction]}
  >
    <button
      className="quia dolores quisquam aut consequatur sint provident"
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn quia dolores quisquam aut consequatur sint provident"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        Ms. Abigale Leffler
        <img
          onError={[Function]}
          src="http://Nicolas.ca/"
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src="http://Nicolas.ca/"
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;

exports[`<Toggle /> matches snapshot 29`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    className="ullam distinctio autem quam qui facere in"
    onClick={[MockFunction]}
  >
    <button
      className="ullam distinctio autem quam qui facere in"
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn ullam distinctio autem quam qui facere in"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        N/A
        <img
          onError={[Function]}
          src=""
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src=""
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;

exports[`<Toggle /> matches snapshot 30`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    onClick={[MockFunction]}
  >
    <button
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        N/A
        <img
          onError={[Function]}
          src="http://Kaci.biz/"
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src="http://Kaci.biz/"
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;

exports[`<Toggle /> matches snapshot 31`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    onClick={[MockFunction]}
  >
    <button
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        N/A
        <img
          onError={[Function]}
          src=""
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src=""
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;

exports[`<Toggle /> matches snapshot 32`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Toggle
    onClick={[MockFunction]}
  >
    <button
      onClick={[MockFunction]}
    >
      <button
        className="sc-AxjAm eKRKLn"
        onClick={[MockFunction]}
      >
        <ChevronDown>
          <svg
            height="24"
            preserveAspectRatio="xMinYMin"
            viewBox="-5 -8 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.071 5.314l4.95-4.95a1 1 0 1 1 1.414 1.414L7.778 7.435a1 1 0 0 1-1.414 0L.707 1.778A1 1 0 1 1 2.121.364l4.95 4.95z"
            />
          </svg>
        </ChevronDown>
        N/A
        <img
          onError={[Function]}
          src=""
        >
          <img
            className="sc-AxirZ cvBUtc"
            onError={[Function]}
            src=""
          />
        </img>
      </button>
    </button>
  </Toggle>
</Provider>
`;
